Fix TestInterfaceSelector failing with InaccessibleObjectException